--- a/Unit 2 CSS/PhysicalTherapyProject/style.css
+++ b/Unit 2 CSS/PhysicalTherapyProject/style.css
@@ -15,7 +15,7 @@ main{
     background-color: #f0f0f0;
     height:80%;
     width:70%;
-    }j
+    }
 footer{
     background-color: #f0f0f0;
       }
